testdata/baselines/reference/conformance/jsdocDestructuringParameterDeclaration.errors.txt
/a.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /**
     * @param {{ a: number; b: string }} args
               ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f({ a, b }) {}
    